# eventflow

./: .gitignore  README.md  firestore.rules  pubspec.yaml  render.yaml  skills.md  srs.txt
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  a5370d2ea086_add_negotiation_flexibility.py  d53fedc62a31_normalize_vendor_categories.py  e47b9bbd0e74_add_floor_price.py
backend/app/: auth.py  config.py  db.py  limiter.py  main.py
backend/app/agents/: aggregator_agent.py  analyzer_agent.py  fireworks_client.py  negotiation_agent.py  prompts.py
backend/app/models/: __init__.py  booking.py  event.py  event_vendor_allocation.py  llm_usage_log.py  negotiation.py  user.py  vendor.py
backend/app/routers/: bookings.py  events.py  negotiations.py  users.py
backend/app/schemas/: __init__.py
backend/app/services/: negotiation_orchestrator.py  notifications.py  pricing_calculator.py  (+3 more)
backend/scripts/: check_allocation.py  check_messages.py  check_type.py  check_user.py  check_users_clean.py  clear_all.py  db_clear.py  debug_firestore.py  delete_users.py  inspect_db.py  inspect_firestore.py  normalize_categories.py  reset_db.py  seed_test_vendor.py  seed_vendors.py  test_concurrency.py  test_e2e_events.py  test_firestore_query.py  test_fireworks.py  test_matching_now.py  test_orchestrator.py  test_raw_connections.py
backend/tests/: test_full_project_smoke.py  test_negotiation_agent.py  test_pricing_calculator.py  test_reliable_smoke_scenario.py
(+55 files in other folders)
